--- a/checkout/theme/manifest.json
+++ b/checkout/theme/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendor": "tfcucl",
-  "name": "true-source-theme",
-  "version": "5.1.2",
+  "vendor": "allever",
+  "name": "allever-theme",
+  "version": "0.0.1",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
